argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: vault
    managedBy: argocd
    managementCodeGroup: chrismlee42
    managementCodeProject: vault-config
  name: vault
  namespace: vault
spec:
  hostnames:
    - vault.service.clee.private.morphacy.net
    - vault.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vault-ui
          port: 80
          weight: 1
